[gd_scene load_steps=12 format=3 uid="uid://dsp034tmb7ti"]

[ext_resource type="PackedScene" uid="uid://bv87orrgq5ha8" path="res://Cards/Spawns/Asset/asset.tscn" id="1_flgjs"]
[ext_resource type="Script" path="res://Cards/Spawns/Asset/sparks.gd" id="2_7r0ta"]
[ext_resource type="Texture2D" uid="uid://duxno38ct10pt" path="res://Cards/Spawns/Asset/Images/lighter.png" id="2_d6ynf"]
[ext_resource type="Script" path="res://Cards/Spawns/Asset/SparkTemplate.gd" id="4_70ova"]
[ext_resource type="AudioStream" uid="uid://cvltm7lvke3vn" path="res://Audio/spark.wav" id="4_svims"]
[ext_resource type="Texture2D" uid="uid://di8o8ux2uk0xy" path="res://Cards/Spawns/Asset/Images/spark.png" id="5_pe3tw"]

[sub_resource type="Animation" id="Animation_tv7yp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ds778"]
resource_name = "sparkup"
length = 1.5
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spark"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_svims")
}],
"times": PackedFloat32Array(0.6)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ff7xw"]
_data = {
"RESET": SubResource("Animation_tv7yp"),
"sparkup": SubResource("Animation_ds778")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fxli1"]
size = Vector2(79, 125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gy14"]
size = Vector2(12.2194, 13.5531)

[node name="Sparks" instance=ExtResource("1_flgjs")]
scale = Vector2(2, 2)
script = ExtResource("2_7r0ta")

[node name="Sprite2D" parent="." index="0"]
position = Vector2(-6, -85)
texture = ExtResource("2_d6ynf")
hframes = 4
vframes = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D" index="0"]
libraries = {
"": SubResource("AnimationLibrary_ff7xw")
}

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(-5.5, -53.5)
shape = SubResource("RectangleShape2D_fxli1")

[node name="SparkTemplate" type="AnimatableBody2D" parent="." index="2"]
visible = false
position = Vector2(-5, -66)
collision_layer = 0
collision_mask = 16
sync_to_physics = false
script = ExtResource("4_70ova")
damage = 3.0
maxAge = 2.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SparkTemplate" index="0"]
position = Vector2(0, 0.5)
rotation = 0.671952
shape = SubResource("RectangleShape2D_8gy14")

[node name="Sprite2D" type="Sprite2D" parent="SparkTemplate" index="1"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_pe3tw")

[node name="SparkPoint" type="Node2D" parent="." index="3"]
position = Vector2(-4, -61)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]
volume_db = -2.5
attenuation = 2.0
bus = &"TableSounds"

[connection signal="frame_changed" from="Sprite2D" to="." method="_on_sprite_2d_frame_changed"]
